[package]
name = "Balatro-shader-simulation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "Balatro-shader-sim"
path = "src/main.rs"

[dependencies]
winit = "0.30"
wgpu = "27.0.1"
image = "0.25"
pollster = "0.4"
bytemuck = { version = "1.24", features = ["derive"] }
rfd = "0.16.0"
notify = "8.2.0"